--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-CONNECT_URL = "mongodb://localhost:27017/MERN_blog"
+CONNECT_URL = "mongodb+srv://asamarun2003:mernblog1234@cluster0.vbdiirs.mongodb.net/?retryWrites=true&w=majority"
