--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.2",
     "path": "^0.12.7"
   }
 }
