--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/",
+  "proxy": "https://as-mer-blog.onrender.com/",
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
     "react-router-dom": "^6.10.0"
